--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
+<!DOCTYPE html>
+<html>
+  <link rel="stylesheet" href="assets/css/main.css">
+<body>
 
+<h1>test</h1>
+<p></p>
+
+</body>
+</html>
