--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
+  <title>Kain Lango</title>
   <link rel="stylesheet" href="assets/css/main.css">
 <body>
-
-<h1>test</h1>
-<p></p>
+  <header>
+    <h1>My Name is Kain Lango</h1>
+    <p1></p1>
+  </header>
+  <aside></aside>
 
 </body>
 </html>
